# gd32e50x-demo-suites-cmake-vscode

./: README.md
Drivers/BSP/GD32E503C_START/: gd32e503c_start.c  gd32e503c_start.h
Drivers/BSP/GD32E503R_START/: gd32e503r_start.c  gd32e503r_start.h
Drivers/BSP/GD32E503V_EVAL/: gd32e503v_eval.c  gd32e503v_eval.h  gd32e503v_lcd_eval.c  gd32e503v_lcd_eval.h
Drivers/BSP/GD32E503Z_EVAL/: gd32e503z_eval.c  gd32e503z_eval.h  gd32e503z_lcd_eval.c  gd32e503z_lcd_eval.h
Drivers/BSP/GD32E507R_START/: gd32e507r_start.c  gd32e507r_start.h
Drivers/BSP/GD32E507V_START/: gd32e507v_start.c  gd32e507v_start.h
Drivers/BSP/GD32E507Z_EVAL/: gd32e507z_eval.c  gd32e507z_eval.h  gd32e507z_lcd_eval.c  gd32e507z_lcd_eval.h
Drivers/BSP/GD32EPRTV_START/: gd32eprtv_start.c  gd32eprtv_start.h
Drivers/GD32E50x_standard_peripheral/Include/: gd32e50x_adc.h  gd32e50x_bkp.h  gd32e50x_can.h  gd32e50x_cmp.h  gd32e50x_crc.h  gd32e50x_ctc.h  gd32e50x_dac.h  gd32e50x_dbg.h  gd32e50x_dma.h  gd32e50x_enet.h  gd32e50x_exmc.h  gd32e50x_exti.h  gd32e50x_fmc.h  gd32e50x_fwdgt.h  gd32e50x_gpio.h  gd32e50x_i2c.h  gd32e50x_misc.h  gd32e50x_pmu.h  gd32e50x_rcu.h  gd32e50x_rtc.h  gd32e50x_sdio.h  gd32e50x_shrtimer.h  gd32e50x_spi.h  gd32e50x_sqpi.h  gd32e50x_timer.h  gd32e50x_tmu.h  gd32e50x_usart.h  gd32e50x_wwdgt.h
Drivers/GD32E50x_standard_peripheral/Source/: gd32e50x_adc.c  gd32e50x_bkp.c  gd32e50x_can.c  gd32e50x_cmp.c  gd32e50x_crc.c  gd32e50x_ctc.c  gd32e50x_dac.c  gd32e50x_dbg.c  gd32e50x_dma.c  gd32e50x_enet.c  gd32e50x_exmc.c  gd32e50x_exti.c  gd32e50x_fmc.c  gd32e50x_fwdgt.c  gd32e50x_gpio.c  gd32e50x_i2c.c  gd32e50x_misc.c  gd32e50x_pmu.c  gd32e50x_rcu.c  gd32e50x_rtc.c  gd32e50x_sdio.c  gd32e50x_shrtimer.c  gd32e50x_spi.c  gd32e50x_sqpi.c  gd32e50x_timer.c  gd32e50x_tmu.c  gd32e50x_usart.c  gd32e50x_wwdgt.c
Drivers/GD32E50x_usbd_library/device/Include/: usb_ch9_std.h  usbd_core.h  usbd_enum.h  usbd_pwr.h  usbd_transc.h
Drivers/GD32E50x_usbd_library/device/Source/: usbd_core.c  usbd_enum.c  usbd_pwr.c  usbd_transc.c
Drivers/GD32E50x_usbd_library/usbd/Include/: usbd_lld_core.h  usbd_lld_int.h  usbd_lld_regs.h
Drivers/GD32E50x_usbd_library/usbd/Source/: usbd_lld_core.c  usbd_lld_int.c
Drivers/GD32E50x_usbhs_library/driver/Include/: drv_usb_core.h  drv_usb_dev.h  drv_usb_host.h  drv_usb_hw.h  drv_usb_regs.h  drv_usbd_int.h  drv_usbh_int.h
Drivers/GD32E50x_usbhs_library/driver/Source/: drv_usb_core.c  drv_usb_dev.c  drv_usb_host.c  drv_usbd_int.c  drv_usbh_int.c
Drivers/GD32E50x_usbhs_library/ustd/common/: usb_ch9_std.h
Projects/GD32E503C_START/01_GPIO_Running_LED/Application/: CMakeLists.txt  readme.txt
Projects/GD32E503C_START/02_GPIO_Key_Polling_mode/Application/: readme.txt
Projects/GD32E503C_START/03_EXTI_Key_Interrupt_mode/Application/: readme.txt
Projects/GD32E503C_START/04_USART_HyperTerminal_Interrupt/: CMakeLists.txt
Projects/GD32E503C_START/04_USART_HyperTerminal_Interrupt/Application/: readme.txt
Projects/GD32E503C_START/05_TIMER_Key_EXTI/Application/: readme.txt
Projects/GD32E503C_START/05_TIMER_Key_EXTI/Drivers/BSP/GD32E503C_START/: CMakeLists.txt
Projects/GD32E503C_START/06_USBD_CDC_ACM/: CMakeLists.txt
Projects/GD32E503C_START/06_USBD_CDC_ACM/Application/: CMakeLists.txt  readme.txt
Projects/GD32E503R_START/01_GPIO_Running_LED/Application/: CMakeLists.txt  readme.txt
Projects/GD32E503R_START/02_GPIO_Key_Polling_mode/Application/: readme.txt
Projects/GD32E503R_START/02_GPIO_Key_Polling_mode/Drivers/BSP/GD32E503R_START/: CMakeLists.txt
Projects/GD32E503R_START/03_EXTI_Key_Interrupt_mode/: CMakeLists.txt
Projects/GD32E503R_START/03_EXTI_Key_Interrupt_mode/Application/: readme.txt
Projects/GD32E503R_START/04_USART_HyperTerminal_Interrupt/Application/: readme.txt
Projects/GD32E503R_START/05_TIMER_Key_EXTI/Application/: readme.txt
Projects/GD32E503R_START/06_USBD_CDC_ACM/: CMakeLists.txt
Projects/GD32E503R_START/06_USBD_CDC_ACM/Application/: CMakeLists.txt  readme.txt
Projects/GD32E503V_EVAL/01_GPIO_Running_LED/Application/: readme.txt
Projects/GD32E503V_EVAL/02_GPIO_Key_Polling_mode/Application/: readme.txt
Projects/GD32E503V_EVAL/11_DAC_Output_Voltage_Value/: CMakeLists.txt
Projects/GD32E503V_EVAL/16_EXMC_TouchScreen/Drivers/BSP/GD32E503V_EVAL/: CMakeLists.txt
Projects/GD32E503V_EVAL/23_USBD_Keyboard/: CMakeLists.txt
Projects/GD32E503Z_EVAL/10_ADC_Channel_Differential_mode/: gd32e50x_flash.ld
Projects/GD32E503Z_EVAL/16_EXMC_TouchScreen/Drivers/BSP/GD32E503Z_EVAL/: CMakeLists.txt
Projects/GD32E503Z_EVAL/17_SDIO_SDCardTest/: CMakeLists.txt
Projects/GD32E503Z_EVAL/24_USBD_Keyboard/: CMakeLists.txt
Projects/GD32E507R_START/01_GPIO_Running_LED/: CMakeLists.txt
Projects/GD32E507R_START/06_USB_MSC_Device/: CMakeLists.txt
Projects/GD32E507R_START/06_USB_MSC_Device/Drivers/BSP/GD32E507R_START/: CMakeLists.txt
Projects/GD32E507V_START/02_GPIO_Key_Polling_mode/: CMakeLists.txt
Projects/GD32E507V_START/02_GPIO_Key_Polling_mode/Drivers/GD32E50x_standard_peripheral/: CMakeLists.txt
Projects/GD32E507V_START/06_USB_MSC_Device/: CMakeLists.txt
Projects/GD32E507V_START/06_USB_MSC_Device/Drivers/BSP/GD32E507V_START/: CMakeLists.txt
Projects/GD32E507Z_EVAL/02_GPIO_Key_Polling_mode/: CMakeLists.txt
Projects/GD32E507Z_EVAL/22_SHRTIMER_TIMER_Breath_LED/Drivers/BSP/GD32E507Z_EVAL/: CMakeLists.txt
Projects/GD32E507Z_EVAL/24_ENET_FreeRTOS_tcpudp/: CMakeLists.txt
Projects/GD32E507Z_EVAL/24_ENET_Raw_tcpudp/: CMakeLists.txt
Projects/GD32E507Z_EVAL/25_USBHS_USB_Device_HID_Keyboard/: CMakeLists.txt  GD32E50x_CL.svd
Projects/GD32E507Z_EVAL/25_USBHS_USB_Host_MSC/: CMakeLists.txt
Projects/GD32EPRTV_START/01_GPIO_Running_LED/Drivers/BSP/GD32EPRTV_START/: CMakeLists.txt
Projects/GD32EPRTV_START/02_GPIO_Key_Polling_mode/: CMakeLists.txt
Projects/GD32EPRTV_START/03_EXTI_Key_Interrupt_mode/: gd32e50x_flash.ld
Projects/GD32EPRTV_START/07_USBD_CDC_ACM/: CMakeLists.txt  GD32EPRT.svd
(+587 files in other folders)
